--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -31,6 +31,21 @@
     }
   }
 
+  &--department-categories { 
+    @include container-main;
+
+    position: relative;
+    top:70px;
+    margin-bottom: 4.5rem;
+    //margin-bottom: 52px;
+   // background-color: white;
+    //z-index: 1;
+    @include breakpoint('mobile') {
+     margin-bottom: 6.5rem;
+     top:60px;
+    }
+  }
+
   &--home-shelf-01 {
     @include container-main;
   }
@@ -127,6 +142,33 @@
       }
     }
 
+    // &--department-categories { 
+    //   @include container-main;
+    //   position: relative;
+    //   top:70px;
+    //   padding-bottom: 5.5rem;
+    //   //margin-bottom: 52px;
+    //   background-color: white;
+    //   z-index: 1;
+    //   @include breakpoint('mobile') {
+    //    margin-bottom: 5rem;
+    //   }
+    // }
+
+    &--department-categories {
+      justify-content: space-around;
+      @media screen and (max-width: 768px) {
+        padding: 0 8px;
+        display: flex;
+        flex-wrap: nowrap;
+        width: 100%;
+        height: 112px;
+        .flexRowContent  {
+          display: flex;
+        }
+      }
+    }
+
     &--mobile-home-categories {
       display: flex;
       flex-direction: row;
@@ -184,6 +226,7 @@
       border-radius: 50%;
       background-color: #dde3e9;
       box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
+      //margin-bottom: 4rem;
 
       &:hover {
         opacity: 0.95;
@@ -207,6 +250,49 @@
       &:hover {
         opacity: 0.95;
         transition: ease-in-out 0.2s;
+      }
+    }
+  }
+
+  &--department-categories-showcase {
+    &:first-child {
+      max-height: 10rem;
+      max-width: 7rem;
+      border-radius: 6px;
+      @media screen and (max-width: 768px) {
+       // width: 180px;
+      }
+      :global(.vtex-store-components-3-x-imageElement) {
+        border-radius: 6px;
+        //min-width: 130px;
+      }
+      :global(.vtex-store-link-0-x-link--department-categories-showcase-cta){
+        border-radius: 16px;
+        font-weight: 500;
+        font-size: 16px;
+        text-decoration: none;
+        text-align: center;
+        line-height: 21px;
+        color: #332c32;
+        padding-top: 5px;
+        display: inline-block;
+        height: 50px;
+        @media screen and (max-width: 768px) {
+          font-size: 14px;
+          line-height: 18px;
+          // white-space: nowrap;
+          // overflow-x: hidden;
+          // text-overflow: ellipsis;
+        }
+      }
+
+      &:hover {
+        opacity: 0.95;
+        transition: ease-in-out 0.2s;
+        :global(.vtex-store-link-0-x-link--department-categories-showcase-cta){
+            color: #4320A8;
+            text-decoration: underline;
+        }
       }
     }
   }
@@ -272,6 +358,10 @@
       }
     }
 
+    &--department-categories-showcase {
+      text-align: center;
+    }
+
     &--home-services-col,
     &--home-blog-col {
       max-width: 200px;
@@ -310,7 +400,7 @@
   :global(.vtex-rich-text-0-x-paragraph--simple-page-title),
   :global(.vtex-rich-text-0-x-headingLevel1--simple-page-title) {
     font-size: $headline-h1;
-    margin: 0.5rem 0!important;
+    margin: 0.5rem 0 !important;
     @include mobile {
       padding: 0 15px;
     }
@@ -320,14 +410,15 @@
     @include mobile {
       padding: 0 15px;
     }
+
     font-size: $headline-h2;
-    margin: 0 0 0.5rem!important;
+    margin: 0 0 0.5rem !important;
     font-weight: 500;
   }
   :global(.vtex-rich-text-0-x-wrapper--simple-page-paragraph) {
     @include mobile {
       padding: 0 15px;
-      margin: 0.5rem 0!important;
+      margin: 0.5rem 0 !important;
     }
   }
 
