--- a/sass/vtex.rich-text.scss
+++ b/sass/vtex.rich-text.scss
@@ -26,12 +26,18 @@
         font-weight: 500;
     }
 }
+.heading--simple-page-title {
+    @include mobile {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
 
 .container--seeAllStores {
     max-width: 1202px;
     @include mobile {
         justify-content: center;
-      }
+    }
 }
 
 .link--seeAllStores {
@@ -78,6 +84,26 @@
         width: 1rem;
         display: inline-block;
     }
+}
+.container--breadcrumbBrandsText {
+    color: #8E8E8E;
+    &::before {
+      content: "/";
+      width: 15px;
+      height: 15px;
+      position: relative;
+      margin-left: 5px;
+    }
+}
+.wrapper--breadcrumbBrandsText {
+    text-decoration: none;
+    color: $blue-dark-text;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+}
+.paragraph--breadcrumbBrandsText {
+    margin: 0;
 }
 
 @include mobile {
