modifica CTA, WA, TopBar mobile

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -64,7 +64,9 @@ $background-bottom-footer: #17171b;
 $blue-active: #291660;
 $blue-hover: #0b1658;
 $blue-dark-text: #1b0e41;
-$emphasis:#f71963;
+$pink-active: #d82f94;
+$pink-hover: #eb0299;
+$emphasis: #f71963;
 $light: #f4f7fa;
 
-$font-family-text: "Roboto", sans-serif;
+$font-family-text: 'Roboto', sans-serif;
