--- a/sass/product/vtex.slider-layout.scss
+++ b/sass/product/vtex.slider-layout.scss
@@ -107,7 +107,7 @@
     align-items: flex-start;
     padding: 5px 5px 20px 5px;
 
-    @include breakpoint("desktop") {
+    @include breakpoint('desktop') {
       column-gap: 16px;
     }
   }
@@ -116,7 +116,7 @@
 .sliderLayoutContainer--shelf-also-view {
   overflow: inherit;
   padding-bottom: 0;
-  height: 480px;
+  height: 420px;
   align-items: baseline;
 }
 .paginationDotsContainer--shelf-also-view {
@@ -152,12 +152,11 @@
 }
 
 .slide--shelf-also-view {
-  @include breakpoint("mobile") {
+  @include breakpoint('mobile') {
     margin-inline: 8px;
   }
 }
 //PDP Slider End
-
 
 //slider blog home
 // .sliderTrack--home-blog {
