--- a/sass/footer/vtex.store-newsletter.scss
+++ b/sass/footer/vtex.store-newsletter.scss
@@ -8,20 +8,19 @@
       border-radius: 3px;
       border: 2px solid #ccc;
       width: 350px;
-      @include breakpoint("mobile") {
+      @include breakpoint('mobile') {
         width: 232px;
       }
-
     }
   }
 
   .formSubmitContainer {
     :global(.vtex-button) {
-      background-color: transparent;
+      background-color: transparent !important;
       width: 0px;
       position: relative;
       &:hover {
-        background-color: transparent;
+        background-color: transparent !important;
       }
       :global(.vtex-button__label) {
         position: relative;
@@ -29,7 +28,7 @@
         top: 10px;
         padding: 0;
         &::before {
-          content: "";
+          content: '';
           width: 24px;
           height: 20px;
           background-repeat: no-repeat;
@@ -41,18 +40,19 @@
         &:hover {
           background-color: transparent;
         }
-        @include breakpoint("mobile") {
+        @include breakpoint('mobile') {
           top: 0;
           right: 40px;
         }
       }
-      @include breakpoint("mobile") {
+      @include breakpoint('mobile') {
+        border-color: transparent !important;
         padding: 0;
         width: 100%;
       }
     }
 
-    @include breakpoint("mobile") {
+    @include breakpoint('mobile') {
       width: 100%;
       height: 40px;
       font-size: 14px;
@@ -61,7 +61,7 @@
   }
 }
 
-.emailInputContainer{
+.emailInputContainer {
   :global(.vtex-styleguide-9-x-input) {
     padding-left: 20px;
     line-height: 24px;
