--- a/sass/header/vtex.disclosure-layout.scss
+++ b/sass/header/vtex.disclosure-layout.scss
@@ -27,18 +27,24 @@
 }
 
 .content--header-disclosureContent {
-  padding: 42px 0;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: justify;
+  min-height: 42px;
+
+  @media screen and (max-width: 768px) {
+    min-height: 165px;
+  }
+
   :global(.vtex-rich-text-0-x-container) {
     position: absolute;
     left: 0;
-    //padding: 10px;
-    top: 40px;
+    padding: 10px;
+    top: 20px;
     color: $white;
     font-size: 14px;
     max-width: 1313px;
-    text-align: center;
-    overflow: hidden;
 
     :global(.vtex-rich-text-0-x-paragraph) {
       margin-top: 2px;
@@ -64,7 +70,7 @@
       align-self: center;
       padding-bottom: 8px;
       &::before {
-        content: "";
+        content: '';
         width: 1.2rem;
         height: 1.2rem;
         display: inline-block;
