--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -4,15 +4,20 @@
 .flexRow {
   &--header-containerPromotion {
     background-color: $background-blue-black;
+
     .flexRowContent--header-containerPromotion {
       @include container-main;
 
       position: relative;
+      width: 100%;
+      display: flex;
+      flex-grow: 1;
+      justify-content: center;
+      text-align: center;
       //height: 36px;
       .stretchChildrenWidth:last-child {
         .flexCol {
-      //     justify-content: center;
-
+          //     justify-content: center;
           :global(.vtex-disclosure-layout-1-x-trigger--header-disclosureTrigger) {
             height: 36px;
           }
@@ -21,7 +26,7 @@
     }
   }
   &--header-desktop-upper {
-    box-shadow: 0 4px 7px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.15);
 
     &::after {
       width: 100%;
@@ -51,7 +56,7 @@
   }
 
   &--header-mobile {
-    box-shadow: 0 1px 6px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.3);
   }
 
   &--header-menu-mobile {
@@ -59,7 +64,7 @@
     bottom: 0;
     background: $white;
     width: 100%;
-    box-shadow: 0 1px 10px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
     padding: 0 15px;
     height: 60px;
     transition: all ease-in-out;
@@ -67,8 +72,8 @@
   }
 
   &--header-categories {
-    background-color: #F4F7FA;
-    @include breakpoint("mobile"){
+    background-color: #f4f7fa;
+    @include breakpoint('mobile') {
       display: none;
     }
     .flexRowContent--header-categories {
@@ -105,7 +110,7 @@
 }
 
 .flexRowContent--minicart-footer {
-  background-color: #F4F7FA;
+  background-color: #f4f7fa;
   .flexColChild {
     display: block;
     text-align: center;
@@ -119,7 +124,7 @@
   margin-bottom: 14px;
   justify-content: space-between;
 
-  @include breakpoint("mobile"){
+  @include breakpoint('mobile') {
     margin-bottom: 8px;
   }
 }
@@ -130,7 +135,6 @@
     margin: 0;
     transition: all 0.3s ease-in-out;
     display: none;
-
 
     &--shrink {
       max-width: 38px;
@@ -150,7 +154,7 @@
     align-items: center;
     justify-content: center;
 
-    @include breakpoint ("mobile") {
+    @include breakpoint('mobile') {
       padding-top: 15px;
       padding-bottom: 5px;
     }
@@ -229,14 +233,14 @@
   align-items: center;
   max-width: 110px;
 
-  @include breakpoint("mobile"){
+  @include breakpoint('mobile') {
     width: 80px;
   }
 }
 
 .flexCol--minicartProductInfo {
   margin-right: 16px;
-  @include breakpoint("mobile"){
+  @include breakpoint('mobile') {
     margin-left: 4px;
   }
 }
@@ -278,8 +282,6 @@
   }
 }
 
-
-
 .flexCol--header-mobile-searchBar--shrink {
   width: calc(100vw - 72px) !important;
   margin-right: auto;
@@ -298,7 +300,7 @@
       border-radius: 4px 0 0 4px;
       border-right: 0;
       &::after {
-        content: "|";
+        content: '|';
         font-size: 2rem;
         font-weight: 200;
         color: $blue-dark;
