--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -6,8 +6,8 @@
   max-width: 332px !important;
   height: 320px;
   position: relative;
- // border-radius: 2px;
- // box-shadow: 0 0 0.6em rgba(135, 135, 135, 0.3);
+  // border-radius: 2px;
+  // box-shadow: 0 0 0.6em rgba(135, 135, 135, 0.3);
   border-radius: 6px;
   border: 1px solid #ddd;
   transition: all 0.4s ease;
@@ -23,15 +23,17 @@
     max-width: 140px;
     text-align: center;
     display: none;
-    color: #4320A8;
+    color: #4320a8;
   }
   @include desktop {
     &:hover {
-      height: 430px;
-      transition: all 0.3s ease;
-      :global(.vtex-product-price-1-x-installments){
-        display: inline-block;
-      }
+      text-decoration: underline;
+
+      // height: 430px;
+      // transition: all 0.3s ease;
+      // :global(.vtex-product-price-1-x-installments){
+      //   display: inline-block;
+      // }
     }
   }
   .clearLink {
@@ -65,7 +67,6 @@
       z-index: 4;
     }
   }
-  
 }
 
 :global(.vtex-search-2-x-biggy-autocomplete) {
@@ -76,10 +77,10 @@
     @include desktop {
       .clearLink {
         padding: 0 5px;
-        .buyButtonText{
+        .buyButtonText {
           font-size: 15px;
         }
-        .buyButtonContainer{
+        .buyButtonContainer {
           display: none;
         }
       }
@@ -98,14 +99,14 @@
 }
 
 .container--summaryComplete
-  :global(.vtex-stack-layout-0-x-stackContainer--savingsStack){
-    height: 164px;
-    top: -5px;
-    @include breakpoint('desktop'){
-      top: -25px;
-    }
+  :global(.vtex-stack-layout-0-x-stackContainer--savingsStack) {
+  height: 164px;
+  top: -5px;
+  @include breakpoint('desktop') {
+    top: -25px;
   }
-  :global(.vtex-store-components-3-x-installmentsPrice) {
+}
+:global(.vtex-store-components-3-x-installmentsPrice) {
   display: none;
 }
 
@@ -211,7 +212,6 @@
 .element--summaryComplete {
   padding: 0;
   position: relative;
-
 
   .priceContainer {
     display: flex;
@@ -452,29 +452,27 @@
   padding-bottom: 10px;
 }
 
-
-
 .element--wishlistProductItem {
   .brandName {
-    max-width: 190px!important;
+    max-width: 190px !important;
   }
   :global(.vtex-flex-layout-0-x-flexRow--summaryTop) {
     left: 0;
     z-index: 1;
     position: absolute;
-    :global(.vtex-store-components-3-x-container){
+    :global(.vtex-store-components-3-x-container) {
       padding: 0;
     }
   }
-  :global(.vtex-store-components-3-x-discountInsideContainer){
+  :global(.vtex-store-components-3-x-discountInsideContainer) {
     top: 10px;
     right: -20px;
   }
-  :global(.vtex-store-components-3-x-container){
+  :global(.vtex-store-components-3-x-container) {
     padding-left: 0;
     padding-right: 0;
   }
-  
+
   .price_sellingPrice {
     padding-bottom: 10px;
   }
@@ -488,7 +486,6 @@
     padding-bottom: 24px;
   }
 }
-
 
 .element--summaryComplete .sellingPrice:nth-child(even) {
   color: $blue-dark;
@@ -539,7 +536,7 @@
     font-size: 14px;
     line-height: 18px;
     color: #000;
-  }  
+  }
 }
 
 /* END - Search Bar Summary */
@@ -691,5 +688,4 @@
   @include breakpoint('mobile') {
     overflow: hidden;
   }
-
 }
